--- a/src/css/overlay.css
+++ b/src/css/overlay.css
@@ -5,7 +5,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 4;
+  z-index: 6;
   visibility: hidden;
   transition-property: opacity;
   transition-duration: .2s;
