--- a/src/css/toast.css
+++ b/src/css/toast.css
@@ -1,7 +1,7 @@
 .wgsa-toast-container {
   position: fixed;
   bottom: 0px;
-  z-index: 4;
+  z-index: 6;
   width: 100%;
   height: 0;
   display: flex;
